--- a/addon/locale/ar/LC_MESSAGES/nvda.po
+++ b/addon/locale/ar/LC_MESSAGES/nvda.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: zRadio 0.3\n"
 "Report-Msgid-Bugs-To: 'nvda-translations@groups.io'\n"
 "POT-Creation-Date: 2020-12-24 07:11+0200\n"
-"PO-Revision-Date: 2021-01-03 10:56+0200\n"
+"PO-Revision-Date: 2021-01-16 16:11+0200\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -133,12 +133,12 @@ msgid ""
 "\n"
 "Inténtelo más tarde."
 msgstr ""
-"لا يمكن تحميل المحطة. \\ N\n"
-"\\ ن\n"
-"تأكد من أن لديك اتصال بالإنترنت. \\ N\n"
-"\\ ن\n"
-"قد تكون الأسباب الأخرى أن المحطة تواجه مشاكل في الوقت الحالي. \\ N\n"
-"\\ ن\n"
+"لا يمكن تحميل المحطة.\n"
+"\n"
+"تأكد من إتصالك بالإنترنت.\n"
+"\n"
+"قد تكون من الأسباب الأخرى أن المحطة تواجه مشاكل في الوقت الحالي.\n"
+"\n"
 "الرجاء معاودة المحاولة في وقت لاحق."
 
 #. Translators: Description for Input Gestures dialog for zRadio
@@ -165,7 +165,7 @@ msgstr "المحطة التي تعمل هي: %s"
 #. Translators: Description for Input Gestures dialog for zRadio
 #: addon\globalPlugins\zRadio\__init__.py:187
 msgid "Reproducir emisora rápidamente 1"
-msgstr "تشغيل المحطة بسرعة 1"
+msgstr "المفضلة 1"
 
 #. Translators: Information message
 #: addon\globalPlugins\zRadio\__init__.py:215
@@ -175,7 +175,7 @@ msgstr "ليس لديك أي محطة في المفضلة في الموضع 1"
 #. Translators: Description for Input Gestures dialog for zRadio
 #: addon\globalPlugins\zRadio\__init__.py:218
 msgid "Reproducir emisora rápidamente 2"
-msgstr "تشغيل المحطة بسرعة 2"
+msgstr "المفضلة 2"
 
 #. Translators: Information message
 #: addon\globalPlugins\zRadio\__init__.py:246
@@ -185,7 +185,7 @@ msgstr "ليس لديك أي محطة في المفضلة في الموضع 2"
 #. Translators: Description for Input Gestures dialog for zRadio
 #: addon\globalPlugins\zRadio\__init__.py:249
 msgid "Reproducir emisora rápidamente 3"
-msgstr "تشغيل المحطة بسرعة 3"
+msgstr "المفضلة3"
 
 #. Translators: Information message
 #: addon\globalPlugins\zRadio\__init__.py:277
@@ -195,7 +195,7 @@ msgstr "ليس لديك أي محطة في المفضلة في الموضع 3"
 #. Translators: Description for Input Gestures dialog for zRadio
 #: addon\globalPlugins\zRadio\__init__.py:280
 msgid "Reproducir emisora rápidamente 4"
-msgstr "تشغيل المحطة بسرعة 4"
+msgstr "المفضلة 4"
 
 #. Translators: Information message
 #: addon\globalPlugins\zRadio\__init__.py:308
@@ -205,7 +205,7 @@ msgstr "ليس لديك أي محطة في المفضلة في الموضع 4"
 #. Translators: Description for Input Gestures dialog for zRadio
 #: addon\globalPlugins\zRadio\__init__.py:311
 msgid "Reproducir emisora rápidamente 5"
-msgstr "تشغيل المحطة بسرعة 5"
+msgstr "المفضلة 5"
 
 #. Translators: Information message
 #: addon\globalPlugins\zRadio\__init__.py:339
